--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
                 <span>=</span>
             </div>
         </div>
-        <script src="calculator.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
